# tuneforge

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MOBILE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: audio_engine_issue.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/backend/: AGENTS.md  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_chord_timelines.py  0003_project_source_key_override.py  0004_lyrics_transcripts.py  0005_job_runtime_metadata.py  0006_artifact_uniqueness.py  0007_artifact_storage_metadata.py  0008_chord_edit_segments.py  0009_chord_backend_metadata.py  0010_tab_imports_and_sections.py
apps/backend/app/: config.py  db.py  dependencies.py  errors.py  export_openapi.py  main.py  models.py  schemas.py
apps/backend/app/api/routes/: artifacts.py  chord_backends.py  health.py  jobs.py  projects.py
apps/backend/app/benchmarks/: chords.py
apps/backend/app/engines/: analysis.py  audio_features.py  chord_labels.py  chords.py  crema_chords.py  demucs_worker.py  lyrics.py  stems.py  transform.py
apps/backend/app/services/: analysis.py  artifacts.py  chord_backends.py  chords.py  jobs.py  lyrics.py  metadata.py  paths.py  projects.py  stems.py  tab_state.py  tabs.py  transformations.py
apps/backend/app/utils/: hashing.py  ids.py  torch_runtime.py
apps/backend/tests/: conftest.py  test_analysis_flow.py  test_audio_analysis_engines.py  test_chord_backends.py  test_chord_flow.py  test_db_migrations.py  test_job_recovery.py  test_lyrics_engine.py  test_lyrics_flow.py  test_projects.py  test_stem_flow.py  test_tab_import_flow.py  test_torch_runtime.py  test_transform_flow.py
apps/desktop/: AGENTS.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.background-playback.test.tsx  App.library.test.tsx  App.mobile.test.tsx  App.project-analysis-mix.test.tsx  App.responsive-ui.test.tsx  (+11 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  about.toml  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: placeholder.txt
apps/desktop/src-tauri/src/: lib.rs  main.rs  mobile_backend.rs
docs/: AGENTS.md  API.md  ARCHITECTURE.md  REFERENCES.md  ROADMAP.md  SPEC.md
packaging/flatpak/: com.tuneforge.desktop.desktop  com.tuneforge.desktop.metainfo.xml  com.tuneforge.desktop.yml  ffmpeg-wrapper.sh  ffprobe-wrapper.sh  rewrite-pnpm-lock.mjs
scripts/: android-arm64-env.sh  android-arm64.toolchain.cmake  android-studio-root-shim.sh  generate-flatpak-sources.mjs  package-dmg.mjs  package-flatpak.mjs  prepare-bundle.mjs  run-backend-module.sh  run-tests.sh  setup-dev.sh  sync-backend-default.sh  sync-backend-legacy-nvidia.sh
(+78 files in other folders)
