[project]
name = "tuneforge-backend"
version = "0.1.0"
description = "Local API and processing backend for Tuneforge."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "demucs>=4.0.1,<5.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "librosa>=0.10.2.post1,<1.0.0",
  "numpy>=1.26.4,<3.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "soundfile>=0.13.1,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn>=0.34.2,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.6,<1.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
