[package]
name = "tuneforge"
version = "0.1.0"
description = "Tuneforge desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
