[package]
name = "tuneforge"
version = "0.1.0"
description = "Tuneforge desktop shell"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
